Wed Feb 25 19:11:31 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkradiobutton.[ch] gtk/gtkradiomenuitem.[ch]: Add a
	::group-changed signal emitted when the radio button/menu item 
	is moved from one group of radio buttons to another. 
	(#79563, based partially on a patch from Padraig O'Briain)

Thu Feb 26 13:23:47 2004  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkwindow-x11.c (set_text_property): Use the right
	free() function. (#135511, George Bronnikov)

2004-02-26  Federico Mena Quintero  <federico@ximian.com>

	* configure.in: Added a comment to inform translators that they
	must add .po files to both po/ and po-properties/ when they add
	new languages to ALL_LINGUAS.

Wed Feb 25 15:36:50 2004  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkselection-x11.c (gdk_utf8_to_compound_text_for_display):
	Call g_convert(), not g_convert() with fallback, since Emacs is
	happier if we reject the COMPOUND_TEXT request and it can
	then ask for UTF-8. (#114527)

	* gtk/gtkselection.c (gtk_selection_data_set_text): When
	TEXT is requested, if COMPOUND_TEXT fails, fall back to STRING.

Wed Feb 25 22:35:00 2004  Tomasz Kłoczko <kloczek@pld.org.pl>

	* cinfigure.in: After changes in G_DEFINE_TYPE minimal required glib
	vesion for build gtk+ is now 2.3.3.

Wed Feb 25 16:00:40 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c (update_appearance): move the
	expander code.

2004-02-25  Danilo Šegan  <dsegan@gmx.net>

	* configure.in (ALL_LINGUAS): po-properties/sr@ije.po added, so
	adding back sr@ije.

2004-02-25  Federico Mena Quintero  <federico@ximian.com>

	* configure.in (ALL_LINGUAS): Remove sr@ije until po-properties/
	is fixed for it.

Wed Feb 25 12:44:49 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkstyle.[ch]: Make realize and unrealize signals. (#73310)

Wed Feb 25 12:21:32 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.[ch] gtk/gtklabel.c: Patch from
	Padraig O'Briain to add gtk_widget_add/remove_mnemonic_label,